updated(upload): displayed product list has been fixed and download notification has been added

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -2,11 +2,12 @@
   "start.greeting": "Hi {firstName}! Welcome to YummyBot.",
   "start.returning": "Welcome back, {firstName}! 👋",
   "start.errorNoId": "Could not determine your Telegram ID.",
-  "help.text": "*Available commands:*\n\n/start — register and greet\n/help — show this help message\n/products — list your added products\n/add <product_name> — add a product by name (e.g., apple)\n/remove <product_name> — remove a product from your list\n/clear — clear your entire product list\n/upload — upload a photo of your fridge for product recognition\n/recipes — get recipe suggestions based on your products and favorites\n/favorites — show your saved favorite recipes\n/menu — show the main menu with buttons",
+  "help.text": "*Available commands:*\n\n/start — register and greet\n/help — show this help message\n/products — list your added products\n/clear — clear your entire product list\n/upload — upload a photo of your fridge for product recognition\n/recipes — get recipe suggestions based on your products and favorites\n/favorites — show your saved favorite recipes\n/menu — show the main menu with buttons",
   "products.noItems": "You have no products. Use /add or /upload to add.",
   "products.header": "Your products:",
   "products.errorNoUser": "Error: could not determine user.",
   "upload.promptPhoto": "Please send a photo of your fridge contents.",
+  "upload.processing": "📷 Photo received, processing. Please wait...",
   "upload.noPhoto": "❗ Please use /upload first, then send a photo.",
   "upload.getFileError": "🚨 Failed to get file from Telegram. Try again later.",
   "upload.downloadTimeout": "🚨 Download timeout. Please try again later.",
@@ -14,7 +15,7 @@
   "upload.recognitionError": "🚨 Recognition service error. Please try later.",
   "upload.noProductsDetected": "ℹ No products detected with ≥ 50% confidence.",
   "upload.noneInCatalog": "⚠ None of the detected products found in catalog.",
-  "upload.foundCatalog": "🔍 Found in catalog ({count}):",
+  "upload.foundCatalog": "🔍 Founded products ({count}):",
   "upload.cacheExpired": "⚠ Data expired. Please send the photo again via /upload.",
   "upload.addedCount": "✅ Added {count} products",
   "upload.replacedCount": "🔄 List replaced. Added {count} products",
