--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -2,11 +2,12 @@
   "start.greeting": "Привет, {firstName}! Добро пожаловать в YummyBot.",
   "start.returning": "С возвращением, {firstName}! 👋",
   "start.errorNoId": "Не удалось определить ваш Telegram ID.",
-  "help.text": "*Доступные команды:*\n\n/start — регистрация и приветствие\n/help — справка по всем командам\n/products — список ваших добавленных продуктов\n/add <название> — добавить продукт по названию (например apple)\n/remove <название> — удалить продукт из списка\n/clear — очистить весь список продуктов\n/upload — загрузить фото холодильника для распознавания продуктов\n/recipes — получить подборку рецептов по вашим продуктам и любимым ингредиентам\n/favorites — показать сохранённые в избранное рецепты\n/menu — показать главное меню с кнопками",
+  "help.text": "*Доступные команды:*\n\n/start — регистрация и приветствие\n/help — справка по всем командам\n/products — список ваших добавленных продуктов\n/clear — очистить весь список продуктов\n/upload — загрузить фото холодильника для распознавания продуктов\n/recipes — получить подборку рецептов по вашим продуктам и любимым ингредиентам\n/favorites — показать сохранённые в избранное рецепты\n/menu — показать главное меню с кнопками",
   "products.noItems": "У вас нет продуктов. Используйте /add или /upload для добавления.",
   "products.header": "Ваши продукты:",
   "products.errorNoUser": "Ошибка: не удалось определить пользователя.",
   "upload.promptPhoto": "Пожалуйста, отправьте фото содержимого холодильника.",
+  "upload.processing": "📷 Фото получено, идёт обработка. Пожалуйста, подождите...",
   "upload.noPhoto": "❗ Сначала отправьте команду /upload, затем фотографию.",
   "upload.getFileError": "🚨 Не удалось получить файл из Telegram. Попробуйте позже.",
   "upload.downloadTimeout": "🚨 Превышено время ожидания при скачивании изображения. Попробуйте позже.",
@@ -14,7 +15,7 @@
   "upload.recognitionError": "🚨 Ошибка сервиса распознавания. Попробуйте позже.",
   "upload.noProductsDetected": "ℹ На фото не найдено продуктов с уверенностью ≥ 50%.",
   "upload.noneInCatalog": "⚠ Ни один из распознанных продуктов не найден в справочнике.",
-  "upload.foundCatalog": "🔍 Найдено в справочнике ({count}):",
+  "upload.foundCatalog": "🔍 Обнаруженные продукты ({count}):",
   "upload.cacheExpired": "⚠️ Данные устарели. Пожалуйста, отправьте фото снова через /upload.",
   "upload.addedCount": "✅ Добавлено продуктов: {count}",
   "upload.replacedCount": "🔄 Список заменён. Добавлено продуктов: {count}",
