--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -69,5 +69,17 @@
   "pagination.next": "Вперёд ▶️",
   "pagination.header": "Стр. {current}/{total}",
   "recipes.showRecipe": "Показать рецепт",
-  "recipes.saveRecipe": "❤️ Сохранить"
+  "recipes.saveRecipe": "❤️ Сохранить",
+  "clear.success": "🗑️ Удалено {count} продуктов из вашего списка.",
+  "clear.empty": "Ваш список продуктов уже пуст.",
+  "history.header": "История за последний час:",
+  "history.errorNoUser": "Ошибка: не удалось определить пользователя.",
+  "history.noEntries": "За последний час нет записей.",
+  "history.event.add_product":     "Добавил продукт",
+  "history.event.remove_product":  "Удалил продукт",
+  "history.event.clear_products":  "Очистил список продуктов",
+  "history.event.upload":          "Загрузил фото",
+  "history.event.show_recipe":     "Посмотрел рецепт",
+  "history.event.save_recipe":     "Сохранил рецепт",
+  "history.event.remove_favorite": "Удалил рецепт из избранного"
 }
